aks/poi-deployment.yaml
#apiVersion: v1
#data:
#  dbserver: c3Fsc2VydmVyZXV0ODI1MC5kYXRhYmFzZS53aW5kb3dzLm5ldA==
#  password: Q2hhbmdlTWUxIQ==
#  username: c3FsYWRtaW5lVXQ4MjUw
#kind: Secret
#metadata:
#  name: db-user-pass
#  namespace: api
#type: Opaque

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api
spec:
  selector:
    matchLabels:
      service: poi
  replicas: 1
  template:
    metadata:
      labels:
        service: poi
    spec:
      serviceAccountName: trip-insight-vault-user
      containers:
      - name: poi
        image: registryeut8250.azurecr.io/poi:1.0
        imagePullPolicy: Always
        volumeMounts:
        - name: secrets-store
          mountPath: "/secrets"
          readOnly: true  
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "db-user-pass"     

---

apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    service: poi
  sessionAffinity: None
  type: ClusterIP
