aks/trips-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api
spec:
  selector:
    matchLabels:
      service: trips
  replicas: 1
  template:
    metadata:
      labels:
        service: trips
    spec:
      serviceAccountName: trip-insight-vault-user
      containers:
      - name: trips
        image: registryeut8250.azurecr.io/trips:1.0
        imagePullPolicy: Always
        volumeMounts:
        - name: secrets-store
          mountPath: "/secrets"
          readOnly: true  
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "db-user-pass"      

---

apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    service: trips
  sessionAffinity: None
  type: ClusterIP
