aks/user-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userjava
  namespace: api
spec:
  selector:
    matchLabels:
      service: userjava
  replicas: 1
  template:
    metadata:
      labels:
        service: userjava
    spec:
      containers:
      - name: userjava
        image: registryeut8250.azurecr.io/user-java:1.0
        imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: userjava-service
  namespace: api
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    service: userjava
  sessionAffinity: None
  type: ClusterIP
