aks/userprofile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
spec:
  selector:
    matchLabels:
      service: userprofile
  replicas: 1
  template:
    metadata:
      labels:
        service: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryeut8250.azurecr.io/userprofile:1.0
        imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  namespace: api
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    service: userprofile
  sessionAffinity: None
  type: ClusterIP
