aks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port: 
              number: 8080
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port: 
              number: 8080 
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: userjava-service
            port: 
              number: 8080
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port: 
              number: 8080  

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripviewer
            port: 
              number: 8080
